<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/connection_status"
        android:textAlignment="center"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_marginBottom="2dp"/>

    <Button
        android:id="@+id/decrease_octave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/decrease_octave"
        android:layout_below="@id/status"
        android:layout_marginTop="1dp"/>


    <TextView
        android:id="@+id/keyboard_octave"
        android:layout_width="103dp"
        android:layout_height="39dp"
        android:layout_below="@id/status"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:text="@string/octave_4"
        android:textAlignment="center"
        android:textSize="17sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/increase_octave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/increase_octave"
        android:layout_below="@id/status"
        android:layout_alignParentRight="true"
        android:layout_marginTop="1dp"
        android:layout_alignParentEnd="true" />



    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="557dp"
        android:layout_below="@id/decrease_octave"
        android:layout_marginTop="1dp"
        android:layout_marginVertical="2dp">


        <ImageButton
            android:id="@+id/doBt"
            android:layout_width="49dp"
            android:layout_height="149dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="200dp"
            android:background="@drawable/ic_whitekey"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/todo" />

        <ImageButton
            android:id="@+id/doSharpBt"
            android:layout_width="31dp"
            android:layout_height="112dp"
            android:layout_marginStart="51dp"
            android:layout_marginLeft="51dp"
            android:layout_marginTop="200dp"
            android:background="@drawable/ic_blackkey"
            android:contentDescription="TODO"
            android:elevation="@dimen/cardview_default_elevation"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/reBt"
            android:layout_width="49dp"
            android:layout_height="149dp"
            android:layout_marginStart="64dp"
            android:layout_marginLeft="64dp"
            android:layout_marginTop="200dp"
            android:background="@drawable/ic_whitekey"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/todo" />


        <ImageButton
            android:id="@+id/reSharpBt"
            android:layout_width="31dp"
            android:layout_height="112dp"
            android:layout_marginStart="95dp"
            android:layout_marginLeft="95dp"
            android:layout_marginTop="150dp"
            android:background="@drawable/ic_blackkey"
            android:contentDescription="TODO"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/miBt"
            android:layout_width="49dp"
            android:layout_height="149dp"
            android:layout_marginStart="108dp"
            android:layout_marginLeft="108dp"
            android:layout_marginTop="200dp"
            android:background="@drawable/ic_whitekey"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="TODO" />

        <ImageButton
            android:id="@+id/faBt"
            android:layout_width="49dp"
            android:layout_height="149dp"
            android:layout_marginStart="152dp"
            android:layout_marginLeft="152dp"
            android:layout_marginTop="200dp"
            android:background="@drawable/ic_whitekey"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="TODO" />


        <ImageButton
            android:id="@+id/faSharpBt"
            android:layout_width="31dp"
            android:layout_height="112dp"
            android:layout_marginStart="183dp"
            android:layout_marginLeft="183dp"
            android:layout_marginTop="150dp"
            android:background="@drawable/ic_blackkey"
            android:contentDescription="TODO"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/solBt"
            android:layout_width="49dp"
            android:layout_height="149dp"
            android:layout_marginStart="196dp"
            android:layout_marginLeft="196dp"
            android:layout_marginTop="200dp"
            android:background="@drawable/ic_whitekey"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="TODO" />


        <ImageButton
            android:id="@+id/solSharpBt"
            android:layout_width="31dp"
            android:layout_height="112dp"
            android:layout_marginStart="228dp"
            android:layout_marginLeft="228dp"
            android:layout_marginTop="150dp"
            android:background="@drawable/ic_blackkey"
            android:contentDescription="TODO"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/laBt"
            android:layout_width="49dp"
            android:layout_height="149dp"
            android:layout_marginStart="240dp"
            android:layout_marginLeft="240dp"
            android:layout_marginTop="200dp"
            android:background="@drawable/ic_whitekey"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="TODO" />


        <ImageButton
            android:id="@+id/laSharpBt"
            android:layout_width="31dp"
            android:layout_height="112dp"
            android:layout_marginStart="272dp"
            android:layout_marginLeft="272dp"
            android:layout_marginTop="150dp"
            android:background="@drawable/ic_blackkey"
            android:contentDescription="TODO"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/siBt"
            android:layout_width="49dp"
            android:layout_height="149dp"
            android:layout_marginStart="284dp"
            android:layout_marginLeft="284dp"
            android:layout_marginTop="200dp"
            android:background="@drawable/ic_whitekey"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/todo" />


    </androidx.constraintlayout.widget.ConstraintLayout>



</RelativeLayout>